added a HOME button

--- a/views/footwear/footwear-index.ejs
+++ b/views/footwear/footwear-index.ejs
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
+    <nav>
+      <a href="/">HOME</a>
+    </nav>
     <h1>Footwear Index page</h1>
     <div class="container">
       <% for (let i = 0; i < products.length; i ++) { %>
