added show route for shoe details

--- a/views/footwear/footwear-index.ejs
+++ b/views/footwear/footwear-index.ejs
@@ -12,7 +12,7 @@
     <div class="container">
       <% for (let i = 0; i < products.length; i ++) { %>
         <div class="product">
-          <a href="/shop/<%=products[i].id%>">
+          <a href="/footwear/<%=products[i].id%>">
           <h3><%= products[i].brand%></h3>
           <h3><%= products[i].model%></h3>
           <img src="<%= products[i].imageURL%>" alt="Picture of shoe">
