added new  and post routes

--- a/views/footwear/footwear-index.ejs
+++ b/views/footwear/footwear-index.ejs
@@ -7,6 +7,7 @@
   <body>
     <nav>
       <a href="/">HOME</a>
+        <a href="/footwear/new">NEW LISTING</a>
     </nav>
     <h1>Footwear Index page</h1>
     <div class="container">
