added edit route and page

--- a/views/footwear/footwear-show.ejs
+++ b/views/footwear/footwear-show.ejs
@@ -9,6 +9,7 @@
       <a href="/">HOME</a>
       <a href="/footwear">GALLERY</a>
       <a href="/footwear/new">NEW LISTING</a>
+      <a href="/footwear/<%=shoes.id%>/edit" class="nav-btn">EDIT LISTING</a>
     </nav>
     <div class="product-container">
       <div class="item-info">
