--- a/views/clothing/clothing-new.ejs
+++ b/views/clothing/clothing-new.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <% include ../partials/head.ejs %>
+  <% include ../partials/head.ejs %>
   </head>
   <body>
     <header>
-      <h1>Sell your Shoes!</h1>
+      <h1>Sell your Clothes!</h1>
     </header>
     <nav>
       <a class="nav-link" href="/">HOME</a>
-      <a class="nav-link" href="/footwear">GALLERY</a>
+      <a class="nav-link" href="/clothing">GALLERY</a>
     </nav>
-    <form class="" action="/footwear" method="POST">
+    <form class="" action="/clothing" method="POST">
       <label>
         Style
         <input type="text" name="style" value="">
@@ -46,6 +46,5 @@
       </label>
     <input class="submit-btn" type="submit" value="Create Listing">
     </form>
-
   </body>
 </html>
