added seed for clothing and used it to fill clothing index page

--- a/views/clothing/clothing-show.ejs
+++ b/views/clothing/clothing-show.ejs
@@ -29,7 +29,7 @@
       </form>
       <% if ( clothes.quantity > 0) { %>
         <form action="/clothing/<%=clothes.id%>?_method=PUT" method="POST">
-          <input class="submit-btn" type="submit" value="BUY" >
+          <input class="submit-btn" type="submit" value="ADD TO CART" >
         </form>
         <% } else { %>
           <h3>Out Of Stock</h3>
