--- a/views/clothing/clothing-show.ejs
+++ b/views/clothing/clothing-show.ejs
@@ -28,7 +28,7 @@
         <input class="submit-btn" type="submit" value="DELETE" />
       </form>
       <% if ( clothes.quantity > 0) { %>
-        <form action="/clothing/<%=clothes.id%>?_method=PUT" method="POST">
+        <form action="/clothing/add/<%=clothes.id%>?_method=PUT" method="POST">
           <input class="submit-btn" type="submit" value="ADD TO CART" >
         </form>
         <% } else { %>
