--- a/views/footwear/footwear-filtered-mens.ejs
+++ b/views/footwear/footwear-filtered-mens.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <% include ../partials/head.ejs %>
+    <% inlcude ../partials/head.ejs %>
   </head>
   <body>
     <header>
@@ -9,11 +9,10 @@
     </header>
     <nav>
       <a class="nav-link" href="/">HOME</a>
+      <a class ="nav-link" href="/footwear">GALLERY</a>
       <a class="nav-link" href="/footwear/new">NEW LISTING</a>
     </nav>
-    <div>
-      Filter by: <a href="/footwear/mens">MEN'S</a>
-    </div>
+
     <div class="container">
       <% for (let i = 0; i < products.length; i ++) { %>
         <div class="product">
