--- a/views/clothing/clothing-index.ejs
+++ b/views/clothing/clothing-index.ejs
@@ -11,18 +11,22 @@
       <a class="nav-link" href="/">HOME</a>
       <a class="nav-link" href="/clothing/new">NEW LISTING</a>
     </nav>
-    <div class="container">
+    <div class="item-container">
       <% for (let i = 0; i < products.length; i ++) { %>
-        <div class="product">
+        <div class="item">
           <a href="/clothing/<%=products[i].id%>">
-          <h3><%= products[i].brand%></h3>
-          <h3><%= products[i].model%></h3>
+          <h3>
+          <%=products[i].gender%> 
+          <%= products[i].brand%>
+          <%= products[i].model%></h3>
           <img src="<%= products[i].imageURL%>" alt="Picture of item">
           <h4>Price: $<%= products[i].price%></h4>
           </a>
         </div>
       <%}%>
-
     </div>
+    <footer>
+      <% include ../partials/footer.ejs %>
+    </footer>
   </body>
 </html>
