--- a/views/footwear/footwear-index.ejs
+++ b/views/footwear/footwear-index.ejs
@@ -9,7 +9,8 @@
     </header>
     <nav>
       <a class="nav-link" href="/">HOME</a>
-      <a class="nav-link" href="/footwear/new">NEW LISTING</a>
+      <a class="nav-link" href="/footwear/new">NEW  FOOTWEAR LISTING</a>
+      <a class="nav-link" href="/clothing">CLOTHING GALLERY</a>
     </nav>
     <!-- container for item and its info -->
     <div class="item-container">
