--- a/views/clothing/clothing-show.ejs
+++ b/views/clothing/clothing-show.ejs
@@ -13,28 +13,36 @@
       <a class="nav-link" href="/clothing/new">NEW LISTING</a>
       <a class="nav-link" href="/clothing/<%=clothes.id%>/edit" class="nav-btn">EDIT LISTING</a>
     </nav>
-    <div class="product-container">
-      <div class="item-info">
-        <h3>Style: <%=clothes.style%></h3>
-        <h3><%=clothes.gender%></h3>
-        <h3><%=clothes.brand%></h3>
-        <h3><%=clothes.model%></h3>
-        <img src="<%=clothes.imageURL%>" alt="Picture of <%=clothes.model%>">
-        <h4>Size: <%=clothes.size%></h4>
-        <h4>Price: $<%=clothes.price%></h4>
-        <h4>Qty Available: <%=clothes.quantity%></h4>
-
-      <form action="/clothing/<%=clothes.id%>?_method=DELETE" method="POST">
-        <input class="submit-btn" type="submit" value="DELETE" />
-      </form>
-      <% if ( clothes.quantity > 0) { %>
-        <form action="/clothing/add/<%=clothes.id%>?_method=PUT" method="POST">
-          <input class="submit-btn" type="submit" value="ADD TO CART" >
-        </form>
-        <% } else { %>
-          <h3>Out Of Stock</h3>
-        <% } %>
+    <div class="product">
+      <div class="product-container">
+        <div class="left">
+          <h3><em>Style: </em><%=clothes.style%></h3>
+          <h3><em>Gender: </em><%=clothes.gender%></h3>
+          <h3><em>Brand: </em><%=clothes.brand%></h3>
+          <h3><em>Model: </em><%=clothes.model%></h3>
+        </div>
+          <img src="<%=clothes.imageURL%>" alt="Picture of <%=clothes.model%>">
+        <div class="right">
+          <h4><em>Size: </em><%=clothes.size%></h4>
+          <h4><em>Price: </em>$<%=clothes.price%></h4>
+          <h4><em>Qty Available: </em><%=clothes.quantity%></h4>
+        </div>
       </div>
+      <div class="form-btns"
+        <form action="/clothing/<%=clothes.id%>?_method=DELETE" method="POST">
+          <input class="submit-btn" type="submit" value="DELETE" />
+        </form>
+        <% if ( clothes.quantity > 0) { %>
+          <form action="/clothing/add/<%=clothes.id%>?_method=PUT" method="POST">
+            <input class="submit-btn" type="submit" value="ADD TO CART" >
+          </form>
+          <% } else { %>
+            <h3>Out Of Stock</h3>
+          <% } %>
+        </div>
     </div>
+    <footer>
+      <% include ../partials/footer.ejs %>
+    </footer>
   </body>
 </html>
