--- a/views/footwear/footwear-new.ejs
+++ b/views/footwear/footwear-new.ejs
@@ -5,49 +5,54 @@
   </head>
   <body>
     <header>
-      <h1>Sell your Shoes!</h1>
+      <h1>REUSE</h1>
+      <h2>Sell your Shoes!</h2>
     </header>
     <nav>
       <a class="nav-link" href="/">HOME</a>
       <a class="nav-link" href="/footwear">GALLERY</a>
     </nav>
-    <div class="new-container">
-      <form class="new-form" action="/footwear" method="POST">
-        <label>
-          Style
-          <input type="text" name="style" value="">
-        </label>
-        <label>
-          Gender
-          <input type="text" name="gender" value="">
-        </label>
-        <label>
-          Brand
-          <input type="text" name="brand" value="">
-        </label>
-        <label>
-          Model
-          <input type="text" name="model" value="">
-        </label><br><br>
-        <label>
-          Image URL
-          <input type="text" name="imageURL" value="">
-        </label>
-        <label>
-          Size
-          <input type="text" name="size" value="">
-        </label>
-        <label>
-          Price
-          <input type="text" name="price" value="">
-        </label>
-        <label>
-          Quantity
-          <input type="text" name="quantity" value="">
-        </label>
+    <div class="edit-new-container">
+      <form class="edit-new-form" action="/footwear" method="POST">
+        <div class="row">
+          <label>
+            Style
+            <input type="text" name="style" value="">
+          </label>
+          <label>
+            Gender
+            <input type="text" name="gender" value="">
+          </label>
+          <label>
+            Brand
+            <input type="text" name="brand" value="">
+          </label>
+          <label>
+            Model
+            <input type="text" name="model" value="">
+          </label>
+        </div>
+        <div class="row">
+          <label>
+            Image URL
+            <input type="text" name="imageURL" value="">
+          </label>
+          <label>
+            Size
+            <input type="text" name="size" value="">
+          </label>
+          <label>
+            Price
+            <input type="text" name="price" value="">
+          </label>
+          <label>
+            Quantity
+            <input type="text" name="quantity" value="">
+          </label>
+        </div>
       </form>
-      <div class="new-submit">
-        <input class="submit-btn" type="submit" value="Create Listing">
+      <div class="submit">
+        <input type="submit" value="Create Listing">
       </div>
     </div>
     <footer>
