--- a/views/clothing/clothing-index.ejs
+++ b/views/clothing/clothing-index.ejs
@@ -5,7 +5,8 @@
   </head>
   <body>
     <header>
-      <h1>Clothing Gallery</h1>
+      <h1>REUSE</h1>
+      <h2>Clothing Gallery</h2>
     </header>
     <nav>
       <a class="nav-link" href="/">HOME</a>
