--- a/views/footwear/footwear-index.ejs
+++ b/views/footwear/footwear-index.ejs
@@ -5,7 +5,8 @@
   </head>
   <body>
     <header>
-      <h1>Footwear Gallery</h1>
+      <h1>REUSE</h1>
+      <h2>Footwear Gallery</h2>
     </header>
     <nav>
       <a class="nav-link" href="/">HOME</a>
