--- a/views/clothing/clothing-show.ejs
+++ b/views/clothing/clothing-show.ejs
@@ -28,7 +28,7 @@
           <h4><em>Qty Available: </em><%=clothes.quantity%></h4>
         </div>
       </div>
-      <div class="form-btns"
+      <div class="form-btns">
         <form action="/clothing/<%=clothes.id%>?_method=DELETE" method="POST">
           <input class="submit-btn" type="submit" value="DELETE" />
         </form>
