added filter routes and ReadMe

--- a/views/clothing/clothing-index.ejs
+++ b/views/clothing/clothing-index.ejs
@@ -13,19 +13,32 @@
       <a class="nav-link" href="/clothing/new">NEW CLOTHING LISTING</a>
       <a class="nav-link" href="/footwear">FOOTWEAR GALLERY</a>
     </nav>
-    <div class="item-container">
-      <% for (let i = 0; i < products.length; i ++) { %>
-        <div class="item">
-          <a href="/clothing/<%=products[i].id%>">
-          <h3>
-          <%=products[i].gender%>
-          <%= products[i].brand%>
-          <%= products[i].model%></h3>
-          <img src="<%= products[i].imageURL%>" alt="Picture of item">
-          <h4>Price: $<%= products[i].price%></h4>
-          </a>
-        </div>
-      <%}%>
+    <!-- container for whole page -->
+    <div class="page">
+      <!-- filters sidebar -->
+      <div class="sidebar">
+          <h3>Sort By</h3>
+          <a class="sidebar-nav" href="/clothing/mens">Men's</a>
+          <a class="sidebar-nav" href="/clothing/womens">Women's</a>
+          <a class="sidebar-nav" href="/clothing/athletic">Athletic</a>
+          <a class="sidebar-nav" href="/clothing/casual">Casual</a>
+          <a class="sidebar-nav" href="/clothing">Full Gallery</a>
+      </div>
+      <!-- container for item and its info -->
+      <div class="item-container">
+        <% for (let i = 0; i < products.length; i ++) { %>
+          <div class="item">
+            <a href="/clothing/<%=products[i].id%>">
+            <h3>
+            <%=products[i].gender%>
+            <%= products[i].brand%>
+            <%= products[i].model%></h3>
+            <img src="<%= products[i].imageURL%>" alt="Picture of item">
+            <h4>Price: $<%= products[i].price%></h4>
+            </a>
+          </div>
+        <%}%>
+      </div>
     </div>
     <footer>
       <% include ../partials/footer.ejs %>
