--- a/views/footwear/footwear-index.ejs
+++ b/views/footwear/footwear-index.ejs
@@ -19,7 +19,11 @@
       <div class="sidebar">
           <h3>Sort By</h3>
           <a class="sidebar-nav" href="/footwear/mens">Men's</a>
-          <a class="sidebar-nav" href="/footwear/mens">Women's</a>
+          <a class="sidebar-nav" href="/footwear/womens">Women's</a>
+          <a class="sidebar-nav" href="/footwear/athletic">Athletic</a>
+          <a class="sidebar-nav" href="/footwear/casual">Casual</a>
+          <a class="sidebar-nav" href="/footwear/Dress">Dress</a>
+          <a class="sidebar-nav" href="/footwear">Full Gallery</a>
       </div>
       <!-- container for item and its info -->
       <div class="item-container">
