fixed typo on index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <body>
     <header>
       <h1 class="name"><strong>REUSE</strong></h1>
-      <h2>where one person's trash is another person's teasure</h2>
+      <h2>where one person's trash is another person's treasure</h2>
     </header>
       <!-- container for homepage -->
       <div class="homepage-center">
