--- a/public/css/main.css
+++ b/public/css/main.css
@@ -196,9 +196,15 @@ input {
       justify-content: space-around;
     }
     .sidebar {
+        width: 95%;
         display: flex;
         flex-direction: row;
         align-items: center;
+    }
+    .sidebar-nav {
+      padding: 0.5em;
+      font-size: .85em;
+      color: #4d4d00;
     }
     .item-container {
       display: flex;
